// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Admin view of Users Table renders error message when no user groups are found 1`] = `
<body>
  <div>
    <div
      class="main-container__wide"
    >
      <div
        class="empty-response"
      >
        <div
          class="empty-response display-flex flex-column flex-align-start"
        >
          No user groups found
          <button
            class="usa-button styles.createQueryButton margin-bottom-3"
            data-testid="button"
            style="margin-left: 1px; margin-top: 1.5rem;"
            type="button"
          >
            Create group
          </button>
        </div>
      </div>
      <div>
        Modal Mock
      </div>
      <div>
        <div
          aria-label="drawer-container"
          class="drawer closed width35"
          data-testid="drawer-open-false"
          id="drawer-container"
          role="dialog"
        >
          <div
            class="display-none"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Super Admin view of Users Table renders content on tab click 1`] = `
<body>
  <div>
    <div
      class="main-container__wide"
    >
      <div
        class="border-base border-bottom-1px margin-bottom-3"
      >
        <button
          class="usa-button--unstyled tab__active"
        >
          Users
        </button>
        <button
          class="usa-button--unstyled tab"
        >
          User groups
        </button>
      </div>
      <button
        class="usa-button createQueryButton margin-bottom-3"
        data-testid="button"
        type="button"
      >
        Add user
      </button>
      <div
        class="userPermissionsTable customizeTableWrapper"
      >
        <table
          class="usa-table usa-table--borderless customizeTable"
          data-testid="table"
        >
          <thead>
            <tr>
              <th
                class="grid-col-5"
              >
                Name
              </th>
              <th
                class="grid-col-3"
              >
                Permissions
              </th>
              <th
                class="grid-col-4"
              >
                User groups
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              id="456"
              tabindex="0"
            >
              <td>
                <div
                  class="buttonHoverGroup"
                >
                  <span>
                    Potter, Lily 
                  </span>
                  <button
                    class="usa-button usa-button--unstyled hoverBtn unstyled-button-container usa-button--unstyled text-bold text-no-underline"
                    data-testid="button"
                    type="button"
                  >
                    <span
                      class="icon-text padding-right-4 display-flex flex-align-center"
                    >
                      <svg
                        aria-label="Pencil icon indicating edit ability"
                        class="usa-icon height-3 width-3"
                        focusable="false"
                        height="1em"
                        role="img"
                        viewBox="0 0 24 24"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04a.996.996 0 0 0 0-1.41l-2.34-2.34a.996.996 0 0 0-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                        />
                      </svg>
                      <span
                        class="padding-left-05"
                        data-testid="edit-group-456"
                      >
                        Rename
                      </span>
                    </span>
                  </button>
                </div>
              </td>
              <td
                class="roleDropdown"
              >
                <label
                  class="usa-label usa-sr-only"
                  data-testid="label"
                  for="role-select-456"
                >
                  User role
                </label>
                <select
                  class="usa-select"
                  data-testid="role-select-456"
                  id="role-select-456"
                >
                  <option
                    value="Super Admin"
                  >
                    Super Admin
                  </option>
                  <option
                    selected=""
                    value="Admin"
                  >
                    Admin
                  </option>
                  <option
                    value="Standard"
                  >
                    Standard
                  </option>
                </select>
              </td>
              <td>
                <button
                  aria-description="Edit Order of the Phoenix members"
                  class="usa-button usa-button--unstyled margin-right-2 text-no-underline"
                  data-testid="button"
                  type="button"
                >
                  <span>
                    Order of the Phoenix
                  </span>
                </button>
              </td>
            </tr>
            <tr
              id="123"
              tabindex="0"
            >
              <td>
                <div
                  class="buttonHoverGroup"
                >
                  <span>
                    Potter, Harry 
                  </span>
                  <button
                    class="usa-button usa-button--unstyled hoverBtn unstyled-button-container usa-button--unstyled text-bold text-no-underline"
                    data-testid="button"
                    type="button"
                  >
                    <span
                      class="icon-text padding-right-4 display-flex flex-align-center"
                    >
                      <svg
                        aria-label="Pencil icon indicating edit ability"
                        class="usa-icon height-3 width-3"
                        focusable="false"
                        height="1em"
                        role="img"
                        viewBox="0 0 24 24"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04a.996.996 0 0 0 0-1.41l-2.34-2.34a.996.996 0 0 0-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                        />
                      </svg>
                      <span
                        class="padding-left-05"
                        data-testid="edit-group-123"
                      >
                        Rename
                      </span>
                    </span>
                  </button>
                </div>
              </td>
              <td
                class="roleDropdown"
              >
                <label
                  class="usa-label usa-sr-only"
                  data-testid="label"
                  for="role-select-123"
                >
                  User role
                </label>
                <select
                  class="usa-select"
                  data-testid="role-select-123"
                  id="role-select-123"
                >
                  <option
                    selected=""
                    value="Super Admin"
                  >
                    Super Admin
                  </option>
                  <option
                    value="Admin"
                  >
                    Admin
                  </option>
                  <option
                    value="Standard"
                  >
                    Standard
                  </option>
                </select>
              </td>
              <td>
                --
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <div>
        Modal Mock
      </div>
      <div>
        <div
          aria-label="drawer-container"
          class="drawer closed width35"
          data-testid="drawer-open-false"
          id="drawer-container"
          role="dialog"
        >
          <div
            class="display-none"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Super Admin view of Users Table renders content on tab click 2`] = `
<body>
  <div>
    <div
      class="main-container__wide"
    >
      <div
        class="border-base border-bottom-1px margin-bottom-3"
      >
        <button
          class="usa-button--unstyled tab"
        >
          Users
        </button>
        <button
          class="usa-button--unstyled tab__active"
        >
          User groups
        </button>
      </div>
      <button
        class="usa-button createQueryButton margin-bottom-3"
        data-testid="button"
        type="button"
      >
        Create group
      </button>
      <div
        class="userGroupsTable customizeTableWrapper"
      >
        <table
          class="usa-table usa-table--borderless customizeTable"
          data-testid="table"
        >
          <thead>
            <tr>
              <th
                class="grid-col-5"
              >
                Name
              </th>
              <th
                class="grid-col-3"
              >
                Members
              </th>
              <th
                class="grid-col-4"
              >
                Assigned queries
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              id="123"
              tabindex="0"
            >
              <td>
                <div
                  class="buttonHoverGroup"
                >
                  <span>
                    Hogwarts
                  </span>
                  <button
                    class="usa-button usa-button--unstyled hoverBtn unstyled-button-container usa-button--unstyled text-bold text-no-underline"
                    data-testid="button"
                    type="button"
                  >
                    <span
                      class="icon-text padding-right-4 display-flex flex-align-center"
                    >
                      <svg
                        aria-label="Pencil icon indicating edit ability"
                        class="usa-icon height-3 width-3"
                        focusable="false"
                        height="1em"
                        role="img"
                        viewBox="0 0 24 24"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04a.996.996 0 0 0 0-1.41l-2.34-2.34a.996.996 0 0 0-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                        />
                      </svg>
                      <span
                        class="padding-left-05"
                        data-testid="edit-group-123"
                      >
                        Rename
                      </span>
                    </span>
                  </button>
                </div>
              </td>
              <td>
                <button
                  aria-description="Edit Hogwarts members"
                  class="usa-button usa-button--unstyled drawerButton margin-right-2 text-no-underline"
                  data-testid="edit-member-list-0"
                  type="button"
                >
                  1 member
                </button>
              </td>
              <td
                class="grid-col-2"
              >
                <div
                  class="buttonHoverGroup"
                >
                  <button
                    aria-description="Edit Hogwarts queries"
                    class="usa-button usa-button--unstyled drawerButton text-no-underline"
                    data-testid="edit-query-list-0"
                    type="button"
                  >
                    0 queries
                  </button>
                  <button
                    class="usa-button usa-button--unstyled hoverBtn unstyled-button-container usa-button--unstyled text-bold text-no-underline destructive-primary"
                    data-testid="button"
                    type="button"
                  >
                    <span
                      class="icon-text padding-right-4 display-flex flex-align-center"
                    >
                      <svg
                        aria-label="Trash icon indicating deletion of disease"
                        class="usa-icon height-3 width-3"
                        focusable="false"
                        height="1em"
                        role="img"
                        viewBox="0 0 24 24"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
                        />
                      </svg>
                      <span
                        class="padding-left-05"
                      >
                        Delete
                      </span>
                    </span>
                  </button>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <div>
        Modal Mock
      </div>
      <div>
        <div
          aria-label="drawer-container"
          class="drawer closed width35"
          data-testid="drawer-open-false"
          id="drawer-container"
          role="dialog"
        >
          <div
            class="display-none"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Super Admin view of Users Table renders error message when no users are found 1`] = `
<body>
  <div>
    <div
      class="main-container__wide"
    >
      <div
        class="border-base border-bottom-1px margin-bottom-3"
      >
        <button
          class="usa-button--unstyled tab__active"
        >
          Users
        </button>
        <button
          class="usa-button--unstyled tab"
        >
          User groups
        </button>
      </div>
      <button
        class="usa-button createQueryButton margin-bottom-3"
        data-testid="button"
        type="button"
      >
        Add user
      </button>
      <div
        class="empty-response"
      >
        No users found
      </div>
      <div>
        Modal Mock
      </div>
      <div>
        <div
          aria-label="drawer-container"
          class="drawer closed width35"
          data-testid="drawer-open-false"
          id="drawer-container"
          role="dialog"
        >
          <div
            class="display-none"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Super Admin view of Users Table renders table view after content is loaded 1`] = `
<body>
  <div>
    <div
      class="main-container__wide"
    >
      <div
        class="border-base border-bottom-1px margin-bottom-3"
      >
        <button
          class="usa-button--unstyled tab__active"
        >
          Users
        </button>
        <button
          class="usa-button--unstyled tab"
        >
          User groups
        </button>
      </div>
      <button
        class="usa-button createQueryButton margin-bottom-3"
        data-testid="button"
        type="button"
      >
        Add user
      </button>
      <div
        class="empty-response"
      >
        No users found
      </div>
      <div>
        Modal Mock
      </div>
      <div>
        <div
          aria-label="drawer-container"
          class="drawer closed width35"
          data-testid="drawer-open-false"
          id="drawer-container"
          role="dialog"
        >
          <div
            class="display-none"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Super Admin view of Users Table renders table view after content is loaded 2`] = `
<body>
  <div>
    <div
      class="main-container__wide"
    >
      <div
        class="border-base border-bottom-1px margin-bottom-3"
      >
        <button
          class="usa-button--unstyled tab__active"
        >
          Users
        </button>
        <button
          class="usa-button--unstyled tab"
        >
          User groups
        </button>
      </div>
      <button
        class="usa-button createQueryButton margin-bottom-3"
        data-testid="button"
        type="button"
      >
        Add user
      </button>
      <div
        class="userPermissionsTable customizeTableWrapper"
      >
        <table
          class="usa-table usa-table--borderless customizeTable"
          data-testid="table"
        >
          <thead>
            <tr>
              <th
                class="grid-col-5"
              >
                Name
              </th>
              <th
                class="grid-col-3"
              >
                Permissions
              </th>
              <th
                class="grid-col-4"
              >
                User groups
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              id="456"
              tabindex="0"
            >
              <td>
                <div
                  class="buttonHoverGroup"
                >
                  <span>
                    Potter, Lily 
                  </span>
                  <button
                    class="usa-button usa-button--unstyled hoverBtn unstyled-button-container usa-button--unstyled text-bold text-no-underline"
                    data-testid="button"
                    type="button"
                  >
                    <span
                      class="icon-text padding-right-4 display-flex flex-align-center"
                    >
                      <svg
                        aria-label="Pencil icon indicating edit ability"
                        class="usa-icon height-3 width-3"
                        focusable="false"
                        height="1em"
                        role="img"
                        viewBox="0 0 24 24"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04a.996.996 0 0 0 0-1.41l-2.34-2.34a.996.996 0 0 0-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                        />
                      </svg>
                      <span
                        class="padding-left-05"
                        data-testid="edit-group-456"
                      >
                        Rename
                      </span>
                    </span>
                  </button>
                </div>
              </td>
              <td
                class="roleDropdown"
              >
                <label
                  class="usa-label usa-sr-only"
                  data-testid="label"
                  for="role-select-456"
                >
                  User role
                </label>
                <select
                  class="usa-select"
                  data-testid="role-select-456"
                  id="role-select-456"
                >
                  <option
                    value="Super Admin"
                  >
                    Super Admin
                  </option>
                  <option
                    selected=""
                    value="Admin"
                  >
                    Admin
                  </option>
                  <option
                    value="Standard"
                  >
                    Standard
                  </option>
                </select>
              </td>
              <td>
                <button
                  aria-description="Edit Order of the Phoenix members"
                  class="usa-button usa-button--unstyled margin-right-2 text-no-underline"
                  data-testid="button"
                  type="button"
                >
                  <span>
                    Order of the Phoenix
                  </span>
                </button>
              </td>
            </tr>
            <tr
              id="123"
              tabindex="0"
            >
              <td>
                <div
                  class="buttonHoverGroup"
                >
                  <span>
                    Potter, Harry 
                  </span>
                  <button
                    class="usa-button usa-button--unstyled hoverBtn unstyled-button-container usa-button--unstyled text-bold text-no-underline"
                    data-testid="button"
                    type="button"
                  >
                    <span
                      class="icon-text padding-right-4 display-flex flex-align-center"
                    >
                      <svg
                        aria-label="Pencil icon indicating edit ability"
                        class="usa-icon height-3 width-3"
                        focusable="false"
                        height="1em"
                        role="img"
                        viewBox="0 0 24 24"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04a.996.996 0 0 0 0-1.41l-2.34-2.34a.996.996 0 0 0-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                        />
                      </svg>
                      <span
                        class="padding-left-05"
                        data-testid="edit-group-123"
                      >
                        Rename
                      </span>
                    </span>
                  </button>
                </div>
              </td>
              <td
                class="roleDropdown"
              >
                <label
                  class="usa-label usa-sr-only"
                  data-testid="label"
                  for="role-select-123"
                >
                  User role
                </label>
                <select
                  class="usa-select"
                  data-testid="role-select-123"
                  id="role-select-123"
                >
                  <option
                    selected=""
                    value="Super Admin"
                  >
                    Super Admin
                  </option>
                  <option
                    value="Admin"
                  >
                    Admin
                  </option>
                  <option
                    value="Standard"
                  >
                    Standard
                  </option>
                </select>
              </td>
              <td>
                --
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <div>
        Modal Mock
      </div>
      <div>
        <div
          aria-label="drawer-container"
          class="drawer closed width35"
          data-testid="drawer-open-false"
          id="drawer-container"
          role="dialog"
        >
          <div
            class="display-none"
          />
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      class="userPermissionsTable customizeTableWrapper"
    >
      <table
        class="usa-table usa-table--borderless customizeTable"
        data-testid="table"
      >
        <thead>
          <tr>
            <th
              class="grid-col-5"
            >
              Name
            </th>
            <th
              class="grid-col-3"
            >
              Permissions
            </th>
            <th
              class="grid-col-4"
            >
              User groups
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            id="456"
            tabindex="0"
          >
            <td>
              <div
                class="buttonHoverGroup"
              >
                <span>
                  Potter, Lily 
                </span>
                <button
                  class="usa-button usa-button--unstyled hoverBtn unstyled-button-container usa-button--unstyled text-bold text-no-underline"
                  data-testid="button"
                  type="button"
                >
                  <span
                    class="icon-text padding-right-4 display-flex flex-align-center"
                  >
                    <svg
                      aria-label="Pencil icon indicating edit ability"
                      class="usa-icon height-3 width-3"
                      focusable="false"
                      height="1em"
                      role="img"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04a.996.996 0 0 0 0-1.41l-2.34-2.34a.996.996 0 0 0-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                      />
                    </svg>
                    <span
                      class="padding-left-05"
                      data-testid="edit-group-456"
                    >
                      Rename
                    </span>
                  </span>
                </button>
              </div>
            </td>
            <td
              class="roleDropdown"
            >
              <label
                class="usa-label usa-sr-only"
                data-testid="label"
                for="role-select-456"
              >
                User role
              </label>
              <select
                class="usa-select"
                data-testid="role-select-456"
                id="role-select-456"
              >
                <option
                  value="Super Admin"
                >
                  Super Admin
                </option>
                <option
                  selected=""
                  value="Admin"
                >
                  Admin
                </option>
                <option
                  value="Standard"
                >
                  Standard
                </option>
              </select>
            </td>
            <td>
              <button
                aria-description="Edit Order of the Phoenix members"
                class="usa-button usa-button--unstyled margin-right-2 text-no-underline"
                data-testid="button"
                type="button"
              >
                <span>
                  Order of the Phoenix
                </span>
              </button>
            </td>
          </tr>
          <tr
            id="123"
            tabindex="0"
          >
            <td>
              <div
                class="buttonHoverGroup"
              >
                <span>
                  Potter, Harry 
                </span>
                <button
                  class="usa-button usa-button--unstyled hoverBtn unstyled-button-container usa-button--unstyled text-bold text-no-underline"
                  data-testid="button"
                  type="button"
                >
                  <span
                    class="icon-text padding-right-4 display-flex flex-align-center"
                  >
                    <svg
                      aria-label="Pencil icon indicating edit ability"
                      class="usa-icon height-3 width-3"
                      focusable="false"
                      height="1em"
                      role="img"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04a.996.996 0 0 0 0-1.41l-2.34-2.34a.996.996 0 0 0-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                      />
                    </svg>
                    <span
                      class="padding-left-05"
                      data-testid="edit-group-123"
                    >
                      Rename
                    </span>
                  </span>
                </button>
              </div>
            </td>
            <td
              class="roleDropdown"
            >
              <label
                class="usa-label usa-sr-only"
                data-testid="label"
                for="role-select-123"
              >
                User role
              </label>
              <select
                class="usa-select"
                data-testid="role-select-123"
                id="role-select-123"
              >
                <option
                  selected=""
                  value="Super Admin"
                >
                  Super Admin
                </option>
                <option
                  value="Admin"
                >
                  Admin
                </option>
                <option
                  value="Standard"
                >
                  Standard
                </option>
              </select>
            </td>
            <td>
              --
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</body>
`;
